# order-inventory-management

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 001_init.sql  002_users.sql
src/: config.rs  errors.rs  main.rs  middleware.rs  models.rs  response.rs  routes.rs  state.rs
src/handlers/: auth_handler.rs  health_handler.rs  mod.rs  order_handler.rs  product_handler.rs  user_handler.rs  ws_handler.rs
src/repositories/: mod.rs  order_repository.rs  product_repository.rs  user_repository.rs
src/utils/: jwt.rs  password.rs
